# greenhouse-sensor-data-manager

./: Cargo.toml  README.md  dfx.json  did.sh  package.json
src/greenhouse-sensor-data-manager-backend/: Cargo.toml
src/greenhouse-sensor-data-manager-backend/src/: lib.rs
