[package]
name = "greenhouse-sensor-data-manager-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
ic-stable-structures = "0.5.1" 
serde = { version = "1.0", features = ["derive"] }
